# db-engine-paradigms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env.sh  lsan_suppress.txt
include/: profile.hpp
include/benchmarks/: Config.hpp  Primitives.hpp
include/benchmarks/ssb/: Queries.hpp
include/benchmarks/tpch/: Queries.hpp
include/common/: Compat.hpp  Util.hpp  defs.hpp
include/common/algebra/: Operators.hpp  Pipeline.hpp  Types.hpp
include/common/runtime/: Barrier.hpp  Concurrency.hpp  Database.hpp  Hash.hpp  Hashmap.hpp  HashmapSmall.hpp  Import.hpp  Memory.hpp  MemoryPool.hpp  Mmap.hpp  PartitionedDeque.hpp  Query.hpp  SIMD.hpp  Stack.hpp  String.hpp  Types.hpp  Util.hpp
include/hyper/: GroupBy.hpp  ParallelHelper.hpp
include/hyper/codegen/: Translator.hpp  TranslatorRegistry.hpp
include/vectorwise/: Operations.hpp  Operators.hpp  Primitives.hpp  Query.hpp  QueryBuilder.hpp  VectorAllocator.hpp  defs.hpp
scripts/: experimentsKNL.sh  experimentsRYZ.sh  experimentsSKX.sh  iCacheMisses.sh
src/: bench.cpp
src/benchmarks/: config.cpp  simdJoin.cpp
src/benchmarks/hardware/: latency.cpp  randomWrites.cpp
src/benchmarks/primitives/: joinmicrobench.cpp  run.cpp  simdselection.cpp
src/benchmarks/sbb/: run.cpp
src/benchmarks/sbb/queries/: q11.cpp  q12.cpp  q13.cpp  q21.cpp  q22.cpp  q23.cpp  q31.cpp  q32.cpp  q33.cpp  q34.cpp  q41.cpp  q42.cpp  q43.cpp
src/benchmarks/tpch/: run.cpp
src/benchmarks/tpch/queries/: q1.cpp  q18.cpp  q3.cpp  q5.cpp  q5_no_sel.cpp  q6.cpp  q9.cpp
src/common/algebra/: Operators.cpp  Pipeline.cpp  Types.cpp
src/common/runtime/: Concurrency.cpp  Database.cpp  Hashmap.cpp  Import.cpp  MemoryPool.cpp  Profile.cpp  String.cpp  Types.cpp
src/hyper/codegen/: Translator.cpp  TranslatorRegistry.cpp
src/hyper/codegen/operators/: Map.cpp  Print.cpp  Scan.cpp
src/test/: SSB.hpp  TPCH.hpp  q18_expected.csv  q21_ssb_expected.csv  q22_ssb_expected.csv  q23_ssb_expected.csv  q31_ssb_expected.csv  q32_ssb_expected.csv  q33_ssb_expected.csv  q34_ssb_expected.csv  q3_expected.csv  q3_expected.txt  q41_ssb_expected.csv  q42_ssb_expected.csv  q43_ssb_expected.csv  q9_expected.csv  ssb.cpp  ssb_expected.cpp  ssb_expected.hpp  tpch.cpp  tpch_expected.cpp  tpch_expected.hpp
src/test/common/: Database.cpp  Hashmap.cpp  Mmap.cpp  PartitionedDeque.cpp
src/test/common/runtime/: Stack.cpp
src/test/vectorwise/: Operators.cpp  primitives.cpp
src/vectorwise/: Operations.cpp  Operators.cpp  QueryBuilder.cpp  VectorAllocator.cpp
src/vectorwise/primitives/: Aggregation.cpp  Hash.cpp  KeyEquality.cpp  Partition.cpp  Projection.cpp  ScatterGather.cpp  Selection.cpp
